# conan2_options_test

./: .gitignore  Dockerfile  README.md  activate.sh  clean.sh  create_all.sh  docker.sh
app/: CMakeLists.txt  conanfile.py
app/src/: CMakeLists.txt  stufftool.cpp
app/test_package/: conanfile.py
lib/: CMakeLists.txt  conanfile.py
lib/src/: CMakeLists.txt  stuff.cpp
lib/test_package/: CMakeLists.txt  conanfile.py  stufflibtestpkg.cpp
